* 22/08/14 - v.2.0.5
   - if spinWait is set to true in the parallel for, than spinBarrier is used as loop barrier
   - removed barrier implementation from node.hpp and created a new file barrier.hpp
   - fixed a bug in the init_data_static function (ParallelFor related)
   - fixed some problems appearing when remove_collector is called
   - an ff_minode can be used in place of the ff_node (i.e. when there is no need to 
     use an ff_minode, indeed) 
   - first version of the ParallelForPipeReduce pattern
   - fixed problem with run_then_freeze for the ff_minode and ff_monode
* 24/01/14 - v.2.0.4
   - poolEvolution interface improved
   - introduced the threadPause() method in the ParallelFor/Reduce patterns. 
     It may be used to  put threads to sleep when the spinwait flag is set 
     and the parallel for is not   used for a while
   - separated parallel_for_internals.hpp and parallel_for.hpp 
   - added the possibility to control the grain size in the static scheduling 
     policy of the ParallelFor(Reduce) pattern(s)
   - ff_node::eosnotify interface changed: 
       virtual void eosnotify(int id=-1) --> virtual void eosnotify(ssize_t id=-1)
   - added the poolEvolutionCUDA pattern with some simple tests (beta version)
   - added the poolEvolution pattern with some simple tests (beta version)
   - stencilReduceCUDA added 
   - moved stencil.hpp to stencilReduce.hpp
* 27/01/14 - v.2.0.3
   - introduced GO_OUT: a new reserved message (see config.hpp)
   - optimized ParallelFor and ParallelReduce computation when executed inside
     a serial loop
   - changed the Barrier implementation (spinBarrier still the same)
   - added the ff_realNumCores() and the ff_numSockets() utility functions
   - a new lock-free task scheduling for the ParallelFor has been implemented. 
     The new scheduling policy is used when the scheduler thread (i.e. farm's emitter 
     thread) is not being started. This scheduling may be enabled at compile time 